--- a/views/reviews-new.handlebars
+++ b/views/reviews-new.handlebars
@@ -3,8 +3,20 @@
       <legend>New Review</legened>
       <!-- TITLE -->
       <p>
-        <label for="title">Title</label><br>
-        <input type="text" name="title" />
+        <label for="review-title">Title</label><br>
+        <input id="review-title" type="text" name="title" />
+      </p>
+
+      <!-- MOVIE TITLE -->
+      <p>
+        <label for="moveie-title">Movie Title</label><br>
+        <input id="movie-title" type="text" name="movieTitle" />
+      </p>
+
+      <!-- DESCRIPTION -->
+      <p>
+        <label for="description-text">Description</label><br>
+        <textarea id="description-text" name="description" rows="10" /></textarea>
       </p>
   </fieldset>
 
