--- a/views/reviews-new.handlebars
+++ b/views/reviews-new.handlebars
@@ -18,6 +18,17 @@
         <label for="description-text">Description</label><br>
         <textarea id="description-text" name="description" rows="10" /></textarea>
       </p>
+
+      .<p>
+        <label for="rating-number">Rating</label><br>
+        <select id="rating-number" name="rating">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </p>
   </fieldset>
 
   <!-- BUTTON -->
