--- a/views/reviews-new.handlebars
+++ b/views/reviews-new.handlebars
@@ -1,35 +1,5 @@
 <form method="POST" action="/reviews">
-  <fieldset>
-      <legend>New Review</legened>
-      <!-- TITLE -->
-      <p>
-        <label for="review-title">Title</label><br>
-        <input id="review-title" type="text" name="title" />
-      </p>
-
-      <!-- MOVIE TITLE -->
-      <p>
-        <label for="moveie-title">Movie Title</label><br>
-        <input id="movie-title" type="text" name="movieTitle" />
-      </p>
-
-      <!-- DESCRIPTION -->
-      <p>
-        <label for="description-text">Description</label><br>
-        <textarea id="description-text" name="description" rows="10" /></textarea>
-      </p>
-
-      <p>
-        <label for="rating-number">Rating</label><br>
-        <select id="rating-number" name="rating">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-        </select>
-      </p>
-  </fieldset>
+  {{> reviews-form}}
 
   <!-- BUTTON -->
   <p>
