--- a/views/reviews-new.handlebars
+++ b/views/reviews-new.handlebars
@@ -4,10 +4,9 @@
       {{> reviews-form}}
       <!-- BUTTON -->
       <div class="form-group">
-        <button type="submit">Save Review</button>
+        <button class="btn btn-primary" type="submit">Save Review</button>
         <a href="/">Cancel</a>
       </div>
-      </p>
     </form>
   </div>
 </div>
