--- a/views/reviews-edit.handlebars
+++ b/views/reviews-edit.handlebars
@@ -1,12 +1,12 @@
-<form method="POST" action="/reviews/{{review._id}}?_method=PUT">
-  {{> reviews-form}}
-
-  <!-- BUTTON -->
-  <p>
-    <button type="submit">Save Review</button>
-  </p>
-  <br>
-  <p>
-    <a href="/">Cancel</a>
-  </p>
-</form>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+    <form method="POST" action="/reviews/{{review._id}}?_method=PUT">
+      {{> reviews-form}}
+      <!-- BUTTON -->
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">Save Review</button>
+        <a href="/">Cancel</a>
+      </div>
+    </form>
+  </div>
+</div>
