--- a/views/partials/reviews-form.handlebars
+++ b/views/partials/reviews-form.handlebars
@@ -1,25 +1,26 @@
 <fieldset>
   <legend>Edit Review</legend>
+
   <!-- TITLE -->
-  <p>
+  <div class="form-group">
     <label for="review-title">Title</label><br>
     <input id="review-title" type="text" name="title" value="{{review.title}}"/>
-  </p>
+  </div>
 
   <!-- MOVIE TITLE -->
-  <p>
+  <div class="form-group">
     <label for="movie-title">Movie Title</label><br>
     <input id="movie-title" type="text" name="movieTitle" value="{{review.movieTitle}}" />
-  </p>
+  </div>
 
   <!-- DESCRIPTION -->
-  <p>
+  <div class="form-group">
     <label for="review-description">Description</label><br>
     <textarea id="review-description" name="description" rows="10" />{{review.description}}</textarea>
-  </p>
+  </div>
 
   <!-- RATING -->
-  <p>
+  <div class="form-group">
     <label for="rating-number">Rating</label><br>
     <select id="rating-number" name="rating">
       <option value="1">1</option>
@@ -28,5 +29,5 @@
       <option value="4">4</option>
       <option value="5">5</option>
     </select>
-  </p>
+</div>
 </fieldset>
