--- a/views/movies-index.handlebars
+++ b/views/movies-index.handlebars
@@ -1,1 +1,5 @@
-<h1>Hello Movies</h1>
+<h1>Now Playing</h1>
+{{#each movies}}
+  <li>{{this.title}}</li>
+  <img height="400" src="https://image.tmdb.org/t/p/w500/{{this.poster_path}}" alt="">
+{{/each}}
