--- a/views/movies-show.handlebars
+++ b/views/movies-show.handlebars
@@ -7,6 +7,14 @@
     <p class="lead">{{movie.overview}}</p>
   </div>
   <div class="embed-responsive embed-responsive-21by9">
-  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{movie.trailer_youtube_id}}?rel=0"></iframe>
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{movie.trailer_youtube_id}}?rel=0"></iframe>
+  </div>
+  <div class="text-right">
+    <a href="/movies/{{movie.id}}/reviews/new" class="btn btn-primary">Write Review</a>
+  </div>
 </div>
-</div>
+
+<h3>Reviews</h3>
+{{#each reviews}}
+  {{> review}}
+{{/each}}
