--- a/views/partials/comment-form.handlebars
+++ b/views/partials/comment-form.handlebars
@@ -1,4 +1,5 @@
 <form action="/reviews/comments" method="post">
+  <input type="hidden" value="{{review.movieId}}" name="movieId">
   <input type="hidden" name="reviewId" value="{{review._id}}" />
   <fieldset>
     <legend>Add Comment</legend>
