--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,10 +1,12 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="/">Rotten Potatoes</a>
+      <a class="navbar-brand" href="/">
+        Rotten Potatoes
+      </a>
     </div>
     <div class="pull-right">
-      <a href="/reviews/new">New Review</a>
+      <a href="/reviews/new" class="btn btn-default navbar-btn">New Review</a>
     </div>
   </div>
 </nav>
