--- a/views/reviews-index.handlebars
+++ b/views/reviews-index.handlebars
@@ -1,11 +1,11 @@
 <h1>Reviews</h1>
 
-<a href="/reviews/new">New Review</a>
+<a href="/movies/{{this.movieId}}/reviews/new">New Review</a>
 
 <div class="row">
   {{#each reviews}}
     <div class="col-sm-3">
-      <h2><a href="/reviews/{{this._id}}">{{this.title}}</a></h2>
+      <h2><a href="/movies/{{this.movieId}}/reviews/{{this._id}}">{{this.title}}</a></h2>
       <small>{{this.movieTitle}}</small>
     </div>
   {{/each}}
