--- a/views/reviews-show.handlebars
+++ b/views/reviews-show.handlebars
@@ -9,7 +9,7 @@
     <p><a href="/movies/{{review.movieId}}/reviews/{{review._id}}/edit">Edit</a></p>
 
     <!-- Delete button -->
-    <p><form method="POST" action="/reviews/{{review._id}}?_method=DELETE">
+    <p><form method="POST" action="/movies/{{review.movieId}}/reviews/{{review._id}}?_method=DELETE">
       <button type="submit">Delete</button>
     </form></p>
 
